# imposto_e_robo

./: .gitignore  LICENSE  README.md  especificacoes.md  main.py  pyproject.toml
imposto_e_robo/: csv_exporter.py  data_extract.py  models.py  regex_strings.py  safeprint.py
tests/: test_imposto_e_robo.py
