[tool.poetry]
name = "imposto_e_robo"
version = "0.1.0"
description = "Sistema que analisa as notas de corretagem e diz como preecencher a declaração do imposto de renda"
authors = ["Marco Aguiar <marcoaaguiar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyMuPDF = "^1.18.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
rope = "^0.18.0"
ipython = "^7.21.0"
ipdb = "^0.13.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
